# forage_bandits

./: .gitignore  README.md  probability_density_function.py  pyproject.toml  requirements.txt
configs/: base.yaml
configs/alg/: discountedegree.yaml  discountedts.yaml  discounteducb.yaml  egree.yaml  neural_hebbian.yaml  ts.yaml  ucb.yaml
configs/env/: dynamic_sigmoid.yaml  dynamic_single_optimal.yaml  poisson_dynamic_sigmoid.yaml  poisson_dynamic_single_optimal.yaml  risky_single_optimal.yaml  sigmoid.yaml  single_optimal.yaml
configs/sweep/: ea_ucb_k.yaml
experiments/: discount_factor_sensitivity.py  epsilon_check.py  epsilon_factor.py  epsilon_factor_gamma.py  experiment_1_arms.py  initial_energy_check.py  neural_hebbian_factor.py  optimal_epsilon_per_arms.py  optimal_initial_energy_check.py  pairwise_comparison.py  pairwise_comparison_energy_factors.py  pairwise_comparison_novel_arm_initialization.py  predicted_lifetime_regret.py  predicted_lifetime_regret_novel.py  predicted_lifetime_regret_novel_arm_initialization.py  risk_sensitivity_pairwise_comparison.py  risk_sensitivity_pairwise_comparison_energy_factors.py  stuff.py  ts_eta_check.py  ts_factor.py  ucb_c_check.py  ucb_eta_check.py  ucb_factor.py  ucb_optimal_mean_check.py  ucb_risk_sensitivity_pairwise_comparison_energy_factors.py  uncertainty_check.py
src/forage_bandits/: __init__.py  cli.py  energy_factors.py  environments.py  metrics.py  plotters.py  simulate.py
src/forage_bandits/agents/: __init__.py  base.py  discountedegree.py  discountedts.py  discounteducb.py  egree.py  neural_hebbian.py  (+2 more)
