[tool.poetry]
name = "forage-bandits"
version = "0.1.0"
description = "Energy-aware multi-armed bandit algorithms for foraging behavior simulation"
authors = ["Forage Bandits Contributors"]
readme = "README.md"
packages = [{include = "forage_bandits", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
hydra-core = "^1.3.0"
omegaconf = "^2.3.0"
scipy = "^1.10.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.3.0"
pylint = "^2.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
forage-run = "forage_bandits.cli:main"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
